--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,6 +8,47 @@
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
 </head>
 <body>
-    <h1>¡Bienvenido a mi proyecto SAPOS!</h1>
+    <!-- Header -->
+    <header class="color-secundario d-flex justify-sb">
+        <div class="barra f-left d-flex pl-1">
+            <div class="logo"></div>
+            <ul class="letra-normal pl-1 d-flex">
+                <li class="pa-1"><a class="color-basico-fb" href="{% url 'inicio' %}">Inicio</a></li>
+                <li class="pa-1"><a class="color-basico-fb" href="#">Nosotros</a></li>
+            </ul>
+        </div>
+        <div class="barra f-right d-flex pr-1 gap-1">
+            <div class="boton color-primario  pa-1">
+                <a class="color-basico-fw" href="{% url 'login' %}">Inicia Sesión</a>
+            </div>
+            <div class="boton pa-1 borde-1">
+                <a class="color-basico-fb" href="{% url 'registrar' %}">Regístrate</a>
+            </div>
+        </div>
+    </header>
+
+    <!-- Sección Principal -->
+    <section class="container-info color-doble d-flex ">
+        <!-- Contenido Izquierdo -->
+        <div class="info-texto pl-5">
+            <div class="logo-completo pb-1"></div>
+            <h2 class="color-terciario-fuente">¡Invierte al instante, donde quieras y cuando quieras!</h2>
+            <p class="color-terciario-fuente pt-1 pb-3">
+                Invertir nunca fue tan sencillo: todo lo que necesitas en la plataforma de inversión definitiva, accesible desde cualquier dispositivo.
+            </p>
+            <div class="d-flex gap-1 pt-1 ">
+                <div class="boton color-primario color-basico-fw pa-1">
+                    <a class="color-basico-fb f-b" href="{% url 'login' %}">Inicia Sesión</a>
+                </div>
+                <div class="boton borde-1 color-basico-fw pa-1 ">
+                    <a class="color-basico-fw f-b" href="{% url 'registrar' %}">Regístrate</a>
+                </div>
+            </div>
+        </div>
+        <!-- Contenido Derecho -->
+        <div class="info-imagen d-flex pl-5">
+            <img src="{% static 'img/2.png' %}" alt="Pantalla" class="imagen-pantalla">
+        </div>
+    </section>
 </body>
 </html>
