--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -35,7 +35,7 @@
                 <input type="password" id="password" class="input-login" placeholder="Contraseña">
             </form>
             <div class="boton color-primario color-basico-fw pa-1">
-                <a class="color-basico-fb f-b" href="{% url 'login' %}">Ingresar</a>
+                <a class="color-basico-fb f-b" href="{% url 'comprar' %}">Ingresar</a>
             </div>
         </div>
     
