[Feature] : Añadir modulo de usuarios con login y signup.\n [Refactor] : Cambiar estructura de htmls para la funcioanlidad

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,10 +19,10 @@
         </div>
         <div class="barra f-right d-flex pr-1 gap-1">
             <div class="boton color-primario  pa-1">
-                <a class="color-basico-fw" href="{% url 'login' %}">Inicia Sesión</a>
+                <a class="color-basico-fb f-b" href="{% url 'usuarios:login' %}">Inicia Sesión</a>
             </div>
             <div class="boton pa-1 borde-1">
-                <a class="color-basico-fb" href="{% url 'registrar' %}">Regístrate</a>
+                <a class="color-basico-fw f-b" href="{% url 'usuarios:signup' %}">Regístrate</a>
             </div>
         </div>
     </header>
@@ -38,10 +38,10 @@
             </p>
             <div class="d-flex gap-1 pt-1 ">
                 <div class="boton color-primario color-basico-fw pa-1">
-                    <a class="color-basico-fb f-b" href="{% url 'login' %}">Inicia Sesión</a>
+                    <a class="color-basico-fb f-b" href="{% url 'usuarios:login' %}">Inicia Sesión</a>
                 </div>
                 <div class="boton borde-1 color-basico-fw pa-1 ">
-                    <a class="color-basico-fw f-b" href="{% url 'registrar' %}">Regístrate</a>
+                    <a class="color-basico-fw f-b" href="{% url 'usuarios:signup' %}">Regístrate</a>
                 </div>
             </div>
         </div>
