--- a/src/static/styles/style.css
+++ b/src/static/styles/style.css
@@ -228,3 +228,27 @@ header {
     height: 100%; /* Mantiene proporciones */
 }
 /* Animaciones */
+
+.mensaje {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    font-size: 16px;
+    display: none;
+}
+
+/* Estilo para el mensaje de éxito */
+.mensaje.success {
+    background-color: #4CAF50; /* Verde */
+    color: white;
+}
+
+/* Estilo para el mensaje de error */
+.mensaje.error {
+    background-color: #f44336; /* Rojo */
+    color: white;
+}
