--- a/src/templates/comprar.html
+++ b/src/templates/comprar.html
@@ -40,7 +40,7 @@
             </div>
             
             <div class="boton color-primario color-basico-fw pa-1">
-                <a class="color-basico-fb f-b" href="{% url 'login' %}">Comprar</a>
+                <a class="color-basico-fb f-b" href="{% url 'usuarios:login' %}">Comprar</a>
             </div>
         </form>
     
@@ -49,6 +49,7 @@
             
         </div>
     </section>
-    
+    {% include 'mensajes.html' %}
+    <script src="{% static 'js/mensajes.js' %}"></script>
 </body>
 </html>
