--- a/src/templates/registrar.html
+++ b/src/templates/registrar.html
@@ -8,23 +8,9 @@
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
 </head>
 <body>
-    <header class="color-secundario d-flex justify-sb">
-        <div class="barra f-left d-flex pl-1">
-            <div class="logo"></div>
-            <ul class="letra-normal pl-1 d-flex">
-                <li class="pa-1"><a class="color-basico-fb" href="{% url 'inicio' %}">Inicio</a></li>
-                <li class="pa-1"><a class="color-basico-fb" href="#">Nosotros</a></li>
-            </ul>
-        </div>
-        <div class="barra f-right d-flex pr-1 gap-1">
-            <div class="boton color-primario  pa-1">
-                <a class="color-basico-fw" href="{% url 'usuarios:login' %}">Inicia Sesión</a>
-            </div>
-            <div class="boton pa-1 borde-1">
-                <a class="color-basico-fw" href="{% url 'usuarios:signup' %}">Regístrate</a>
-            </div>
-        </div>
-    </header>
+
+    {% include 'header.html' %}
+
     <section class="container-info d-flex">
         <!-- Columna Izquierda: Formulario de Login -->
         <div class="imagen-login">
