--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
 </head>
 <body>
-
     {% include 'header.html' %}
+
 
     <!-- Sección Principal -->
     <section class="container-info color-doble d-flex ">
@@ -20,14 +20,17 @@
             <p class="color-terciario-fuente pt-1 pb-3">
                 Invertir nunca fue tan sencillo: todo lo que necesitas en la plataforma de inversión definitiva, accesible desde cualquier dispositivo.
             </p>
-            <div class="d-flex gap-1 pt-1 ">
+            {% if not user.is_authenticated %}
+            <!-- Botones visibles solo si el usuario NO está autenticado -->
+            <div class="d-flex gap-1 pt-1">
                 <div class="boton color-primario color-basico-fw pa-1">
                     <a class="color-basico-fb f-b" href="{% url 'usuarios:login' %}">Inicia Sesión</a>
                 </div>
-                <div class="boton borde-1 color-basico-fw pa-1 ">
+                <div class="boton borde-1 color-basico-fw pa-1">
                     <a class="color-basico-fw f-b" href="{% url 'usuarios:signup' %}">Regístrate</a>
                 </div>
             </div>
+            {% endif %}
         </div>
         <!-- Contenido Derecho -->
         <div class="info-imagen d-flex pl-5">
