--- a/src/templates/perfil.html
+++ b/src/templates/perfil.html
@@ -3,17 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio</title>
+    <title>Perfil</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
-    <link rel="stylesheet" href="{% static 'styles/tabla.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/perfil.css' %}">
 </head>
 <body>
-
     {% include 'header.html' %}
 
-    
-    
+    <h1>Perfil de Usuario</h1>
+
+    <div class="profile-container">
+        <!-- Imagen de Perfil -->
+        <div class="profile-image">
+            <img src="{% static 'img/perfilDefault.png' %}" alt="Imagen de perfil">
+        </div>
+
+        <!-- Datos Personales -->
+        <div class="profile-details">
+            <form action="{% url 'usuarios:updatePerfil' %}" method="POST">
+                {% csrf_token %}
+
+                <label for="nombre">Nombre completo:</label>
+                <input type="text" id="nombre" name="nombre" value="{{ usuario.nombres }}" required>
+                
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" value="{{ usuario.email }}" required>
+                
+ <label for="contraseña_actual">Contraseña Actual:</label>
+<div style="display: flex; align-items: center;">
+    <input 
+        type="password" 
+        id="contraseña_actual" 
+        name="contraseña_actual" 
+        required 
+        style="flex: 1; margin-right: 5px;"
+    >
+    <button 
+        type="button" 
+        class="toggle-password" 
+        data-input="contraseña_actual"
+        style="padding: 5px; font-size: 12px;"
+    >
+        Mostrar
+    </button>
+</div>
+
+<label for="nueva_contraseña">Nueva Contraseña:</label>
+<div style="display: flex; align-items: center;">
+    <input 
+        type="password" 
+        id="nueva_contraseña" 
+        name="nueva_contraseña" 
+        required 
+        style="flex: 1; margin-right: 5px;"
+    >
+    <button 
+        type="button" 
+        class="toggle-password" 
+        data-input="nueva_contraseña"
+        style="padding: 5px; font-size: 12px;"
+    >
+        Mostrar
+    </button>
+</div>
+
+
+                <script src="{% static 'js/passwordToggle.js' %}"></script>                
+                <label for="telefono">Teléfono:</label>
+                <input type="tel" id="telefono" name="telefono" value="{{ usuario.telefono }}" required>
+                
+                <button type="submit" class="btn-actualizar">Actualizar</button>
+            </form>
+        </div>
+    </div>
     {% include 'mensajes.html' %}
     <script src="{% static 'js/mensajes.js' %}"></script>
 </body>
