[Feature]: Mejorar el diseño del sitio web

--- a/src/static/styles/style.css
+++ b/src/static/styles/style.css
@@ -54,9 +54,21 @@ a {
 /*fuentes*/
 .color-primario-fuente { color: #176FA6; }
 .color-secundario-fuente { color: #707070; }
-.color-terciario-fuente { color: #d8d8d8; }
+.color-terciario-fuente {
+     color: #d8d8d8;
+     font-size: 35px; 
+     text-align: left;
+     padding-right: 0px;
+     padding-left: 40px;
+}
+#mi-parrafo-especifico {
+    font-size: 22px;
+    text-align: left;
+    padding-right: 90px;
+    padding-left: 40px;
+}
 .color-basico-fb { color: black; }
-.color-basico-fw { color: white; }
+.color-basico-fw { color: rgb(255, 255, 255); }
 /*tamaño fuentes*/
 .f-b{font-size: 16px;;}
 .f-xb{font-size: 22px;}
@@ -117,7 +129,7 @@ header {
     margin: 0 auto;
 }
 .logo-completo{
-    height: 300px;
+    height: 250px;
     width: 300px;
     background-image: url(../img/finac-blanco.png);
     background-repeat: no-repeat;
@@ -141,6 +153,63 @@ header {
     text-align: center;
     cursor: pointer;
 }
+
+#boton-registro {
+    border: 2px solid white;  
+    padding: 10px;             
+    text-align: center; 
+    transition: background-color 0.5s;       
+}
+
+#boton-registro:hover {
+    background-color: white;  
+}
+
+#boton-registro a {
+    color: white;  /* Color del texto en blanco */
+    font-weight: bold;
+    text-decoration: none;
+    transition: color 0.5s;  /* Suaviza el cambio de color del texto */
+}
+
+#boton-registro:hover a {
+    color: black;  
+}
+
+#boton-crear-cuenta {
+    border: 2px solid rgb(0, 0, 0);  
+    padding: 10px;             
+    text-align: center; 
+    transition: background-color 0.5s;  
+}
+
+#boton-crear-cuenta:hover {
+    background-color: rgba(0, 0, 0, 0.836);  
+}
+
+#boton-crear-cuenta a {
+    color: rgb(0, 0, 0);  /* Color del texto en blanco */
+    font-weight: bold;
+    text-decoration: none;
+    transition: color 0.5s;  /* Suaviza el cambio de color del texto */
+}
+
+#boton-crear-cuenta:hover a {
+    color: rgb(255, 255, 255);  
+}
+
+#boton-registrar {
+    border: none;
+    color: white; 
+    padding: 10px;             
+    text-align: center; 
+    transition: background-color 0.5s;       
+}
+
+#boton-iniciar-sesion {
+    border: none;
+}
+
 .card {
     width: 180px;
     border: 1px solid #707070;
@@ -168,6 +237,15 @@ header {
     display: flex;
     justify-content: center; /* Centra la imagen dentro del contenedor */
     align-items: center; /* Centra la imagen verticalmente */
+    animation: mover-der-izq 1s ease-in-out;
+}
+@keyframes mover-der-izq {
+    from {
+        transform: translateX(100%); /* Inicia fuera de la pantalla hacia arriba */
+    }
+    to {
+        transform: translateY(0); /* Termina en su posición original */
+    }
 }
 
 .info-login {
@@ -180,11 +258,29 @@ header {
     width: 50%;
     width: auto;
 }
-.imagen-login {
-    width: 50%; /* Ocupa la mitad del ancho */
+#imagen-login1 {
+    width: 50%;
     display: flex;
     justify-content: center; /* Centra horizontalmente la imagen */
-    align-items: center; /* Centra verticalmente la imagen */
+    align-items: center; /* Centra la imagen verticalmente */
+    animation: moveIn 1s ease-in-out;
+}
+
+#imagen-registrar {
+    width: 50%;
+    display: flex;
+    justify-content: center; /* Centra horizontalmente la imagen */
+    align-items: center; /* Centra la imagen verticalmente */
+    animation: mover-der-izq 1s ease-in-out;
+}
+
+@keyframes moveIn {
+    from {
+        transform: translateX(-100%); /* Inicia fuera de la pantalla hacia arriba */
+    }
+    to {
+        transform: translateY(0); /* Termina en su posición original */
+    }
 }
 
 
