--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -31,7 +31,7 @@
             <div class="boton color-primario pa-1">
                 <a class="color-basico-fw" href="{% url 'usuarios:login' %}">Iniciar Sesión</a>
             </div>
-            <div class="boton pa-1 borde-1">
+            <div id="boton-crear-cuenta" class="boton pa-1 borde-1">
                 <a class="color-basico-fw" href="{% url 'usuarios:signup' %}">Crear Cuenta</a>
             </div>
         {% endif %}
