--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -20,7 +20,7 @@
                 {% csrf_token %}
                 <input type="email" name="email" id="email" class="input-login" placeholder="Email" required>
                 <input type="password" name="password" id="password" class="input-login" placeholder="Contraseña" required>
-                <button type="submit" class="boton color-primario color-basico-fw pa-1">
+                <button id="boton-iniciar-sesion" type="submit" class="boton color-primario color-basico-fw pa-1">
                     <span class="color-basico-fb f-b">Ingresar</span>
                 </button>
             </form>
@@ -28,7 +28,7 @@
         </div>
     
         <!-- Columna Derecha: Imagen -->
-        <div class="imagen-login">
+        <div id="imagen-login1" class="imagen-login">
             <img src="{% static 'img/imagen.png' %}" alt="Pantalla" class="imagen-pantalla">
         </div>
     </section>
