--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -28,8 +28,8 @@
         </div>
     
         <!-- Columna Derecha: Imagen -->
-        <div id="imagen-login1" class="imagen-login">
-            <img src="{% static 'img/imagen.png' %}" alt="Pantalla" class="imagen-pantalla">
+        <div id="imagen-contenedor" class="imagen-login">
+            <img id="imagen-login1" src="{% static 'img/imagen.png' %}" alt="Pantalla" class="imagen-pantalla">
         </div>
     </section>
 
