[Refactor]: Ajustar diseño del sitio web

--- a/src/templates/perfil.html
+++ b/src/templates/perfil.html
@@ -11,7 +11,11 @@
 <body>
     {% include 'header.html' %}
 
-    <h1>Perfil de Usuario</h1>
+    <div class="color-cuatro pt-3">
+        <h3 class="pb-1 f-xb color-basico-fw" style="border-bottom: 2px solid #ccc; margin-left: 50px; margin-right: 50px;">
+            Perfil de Usuario
+        </h3>
+    </div>
 
     <div class="profile-container">
         <!-- Imagen de Perfil -->
