--- a/src/static/styles/style.css
+++ b/src/static/styles/style.css
@@ -152,6 +152,7 @@ header {
     border-radius: 15px;
     text-align: center;
     cursor: pointer;
+    width: 110px;
 }
 
 #boton-registro {
@@ -309,13 +310,36 @@ header {
     border: 1px solid #ccc;
     border-radius: 5px;
 }
+.campo {
+    display: flex;
+    align-items:center;
+    justify-content:end;
+}
+
 .input-compra {
-    width: 70%; /* Ocupa todo el ancho del formulario */
+ 
+
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    width: 425px; 
+    margin-right: 50px;  /* Cambia este valor a la posición deseada en X */
+    
+    display: block; /* Asegura que cada input esté en una nueva línea */
 }
+
+.etiqueta {
+    font-size: 14px;
+
+    padding: 10px;
+    width: 125px; 
+    display: inline-block;
+    font-family: Arial, sans-serif;
+    
+}
+
+
 .input-registro {
     width: 70%; /* Ocupa todo el ancho del formulario */
     padding: 10px;
@@ -323,6 +347,7 @@ header {
     border: 1px solid #ccc;
     border-radius: 5px;
 }
+
 
 /* Columna Derecha: Imagen */
 .imagen-pantalla {
