--- a/src/static/styles/style.css
+++ b/src/static/styles/style.css
@@ -9,6 +9,27 @@
     src: url('../fonts/sf-ui-display-light.otf') format('opentype');
 }
 
+#body-comprar{
+    overflow: hidden;
+}
+
+#btn-comprar {
+    border: none;
+    margin-left: 15%;
+    margin-top: 2%;
+    border-radius: 15px;
+    text-align: center;
+    cursor: pointer;
+    width: 210px;
+    background-color: #3193e2;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 10px;
+    transition: background-color 0.5s;
+    font-size: 20px;
+}
+
 /* Preset */
 body { margin: 0; padding: 0; }
 * { margin: 0}
