--- a/src/templates/comprar.html
+++ b/src/templates/comprar.html
@@ -7,7 +7,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
 </head>
-<body>
+<body id="body-comprar">
 
     {% include 'header.html' %}
 
@@ -49,44 +49,54 @@
         </form>
     
         <!-- Columna Derecha: Tabla con empresas y acciones -->
+
         <div class="acciones-disponibles">
             <table class="tabla-acciones">
                 <thead>
                     <tr>
+                        <th>Imagen</th>
                         <th>Empresa</th>
                         <th>Nombre Acción</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr onclick="agregarNombreAccion('GOOGL')">
+                        <td><img src="{% static 'img/google.png' %}" alt="Google" width="50"></td>
                         <td>Google</td>
                         <td>GOOGL</td>
                     </tr>
                     <tr onclick="agregarNombreAccion('MSFT')">
+                        <td><img src="{% static 'img/microsoft.png' %}" alt="Microsoft" width="50"></td>
                         <td>Microsoft</td>
                         <td>MSFT</td>
                     </tr>
                     <tr onclick="agregarNombreAccion('TSLA')">
+                        <td><img src="{% static 'img/tesla.png' %}" alt="Tesla" width="50"></td>
                         <td>Tesla</td>
                         <td>TSLA</td>
                     </tr>
                     <tr onclick="agregarNombreAccion('META')">
+                        <td><img src="{% static 'img/meta.png' %}" alt="Meta" width="50"></td>
                         <td>Meta (Facebook)</td>
                         <td>META</td>
                     </tr>
                     <tr onclick="agregarNombreAccion('NFLX')">
+                        <td><img src="{% static 'img/netflix.png' %}" alt="Netflix" width="50"></td>
                         <td>Netflix</td>
                         <td>NFLX</td>
                     </tr>
                     <tr onclick="agregarNombreAccion('NVDA')">
+                        <td><img src="{% static 'img/nvidia.png' %}" alt="NVIDIA" width="50"></td>
                         <td>NVIDIA</td>
                         <td>NVDA</td>
                     </tr>
                     <tr onclick="agregarNombreAccion('DIS')">
+                        <td><img src="{% static 'img/disney.png' %}" alt="Disney" width="50"></td>
                         <td>Disney</td>
                         <td>DIS</td>
                     </tr>
                     <tr onclick="agregarNombreAccion('INTC')">
+                        <td><img src="{% static 'img/intel.png' %}" alt="Intel" width="50"></td>
                         <td>Intel</td>
                         <td>INTC</td>
                     </tr>
@@ -94,7 +104,6 @@
             </table>
         </div>
 
-    </section>
     
     {% include 'mensajes.html' %}
     <script src="{% static 'js/compras.js' %}"></script>
